--- a/bedrock/firefox/templates/firefox/includes/family-nav.html
+++ b/bedrock/firefox/templates/firefox/includes/family-nav.html
@@ -84,68 +84,172 @@ are those changes? We don't know yet! Stay on your toes!
   CTA is purposefully hidden for mobile.
 #}
 
-<header id="fxfamilynav-header"{% if (fxfamilynav_class) %} class="{{ fxfamilynav_class }}"{% endif %}>
+<header id="fxfamilynavV1-header" class="fxfamilynav-header{% if (fxfamilynav_class) %} {{ fxfamilynav_class }}{% endif %}">
   <div class="container">
-    <i id="fxfamilynav-logo">{{ _('Firefox') }}</i>
-    <nav id="fxfamilynav" role="navigation">
-      <ul id="fxfamilynav-primary" class="primarynav">
+    <i class="fxfamilynav-logo">{{ _('Firefox') }}</i>
+    <nav id="fxfamilynavV1" class="fxfamilynav"  role="navigation">
+      <ul id="fxfamilynavV1-primary" class="primarynav">
         {# L10n: The <span> elements below are for visual formatting #}
         <li><a href="{{ url('firefox.desktop.index') }}" class="primary-link" data-id="desktop">{{ _('<span>for</span> Desktop') }}</a></li>
         <li><a href="{{ url('firefox.android.index') }}" class="primary-link" data-id="android">{{ _('<span>for</span> Android') }}</a></li>
         <li><a href="{{ url('firefox.os.index') }}" class="primary-link" data-id="os">{{ _('OS') }}</a></li>
       </ul>
 
-      <div id="fxfamilynav-subnav">
+      <div id="fxfamilynavV1-subnav" class="fxfamilynav-subnav">
         <ul class="subnav" data-parent="desktop">
           <li><a href="{{ url('firefox.desktop.index') }}" data-id="desktop-index">{{ _('Overview') }}</a></li>
           <li><a href="{{ url('firefox.desktop.trust') }}" data-id="desktop-trust">{{ _('Trusted') }}</a></li>
           <li><a href="{{ url('firefox.desktop.customize') }}" data-id="desktop-customize">{{ _('Flexible') }}</a></li>
           <li><a href="{{ url('firefox.desktop.fast') }}" data-id="desktop-fast">{{ _('Fast') }}</a></li>
+          <li><a href="{{ url('firefox.sync') }}" data-id="desktop-sync">{{ _('Sync') }}</a></li>
+          <li><a href="{{ url('firefox.hello') }}" data-id="desktop-hello">{{ _('Hello') }}</a></li>
         </ul>
 
         <ul class="subnav" data-parent="android">
           <li><a href="{{ url('firefox.android.index') }}" data-id="android-index">{{ _('Overview') }}</a></li>
+          <li><a href="{{ url('firefox.sync') }}" data-id="android-sync">{{ _('Sync') }}</a></li>
         </ul>
 
         <ul class="subnav active" data-parent="os">
-          <li><a href="{{ url('firefox.os.index') }}" data-id="os-index">{{ _('About') }}</a></li>
+          <li><a href="{{ url('firefox.os.index') }}" data-id="os-index">{{ _('Overview') }}</a></li>
           <li><a href="{{ url('firefox.os.devices') }}" data-id="os-devices">{{ _('Devices') }}</a></li>
           <li><a href="{{ url('firefox.partners.index') }}" data-id="os-partners">{{ _('For partners') }}</a></li>
+          <li><a rel="external" href="https://marketplace.firefox.com/" data-id="os-marketplace">{{ _('Marketplace') }}</a></li>
         </ul>
-      </div> {# --/#fxfamilynav-subnav --#}
+      </div>{# --/#fxfamilynavV1-subnav --#}
 
-      <div id="fxfamilynav-tertiarynav">
+      <div id="fxfamilynavV1-tertiarynav" class="fxfamilynav-tertiarynav">
         {# the triangle needs a border, so :before content doesn't cut it #}
         <div class="triangle"></div>
         <div class="triangle-border"></div>
 
         <ul class="tertiarynav" data-parent="desktop">
-          <li><a rel="external" href="https://support.mozilla.org/products/firefox" data-ga="desktop - support">{{ _('Support') }}</a></li>
-          <li><a href="{{ url('firefox.dnt') }}" data-ga="desktop - dnt">{{ _('DNT') }}</a></li>
+          <li><a href="{{ url('firefox.dnt') }}" data-ga="desktop - dnt">{{ _('Do Not Track') }}</a></li>
+          <li><a href="{{ url('firefox.tiles') }}" data-ga="desktop - tiles">{{ _('Tiles') }}</a></li>
+          <li><a href="{{ url('firefox.interest-dashboard') }}" data-ga="desktop - interest dashboard">{{ _('Interest Dashboard') }}</a></li>
+          <li><a href="{{ url('firefox.developer') }}" data-ga="desktop - developer edition">{{ _('Developer Edition') }}</a></li>
           <li><a rel="external" href="https://support.mozilla.org/kb/private-browsing-browse-web-without-saving-info" data-ga="desktop - private browsing">{{ _('Private Browsing') }}</a></li>
           <li><a rel="external" href="https://addons.mozilla.org" data-ga="desktop - addons">{{ _('Add-Ons') }}</a></li>
+          <li><a rel="external" href="https://support.mozilla.org/products/firefox" data-ga="desktop - support">{{ _('Need help?') }}</a></li>
         </ul>
 
         <ul class="tertiarynav" data-parent="android">
-          <li><a rel="external" href="https://support.mozilla.org/products/mobile" data-ga="android - support">{{ _('Support') }}</a></li>
-          <li><a href="{{ url('firefox.dnt') }}" data-ga="android - dnt">{{ _('DNT') }}</a></li>
+          <li><a href="{{ url('firefox.dnt') }}" data-ga="android - dnt">{{ _('Do Not Track') }}</a></li>
           <li><a rel="external" href="https://www.youtube.com/watch?v=Ewk0YtFTBec&amp;list=PLA8ABF6B7A66A0C5E&amp;index=15" data-ga="android - private browsing">{{ _('Private Browsing') }}</a></li>
           <li><a rel="external" href="https://addons.mozilla.org/android/" data-ga="android - addons">{{ _('Add-Ons') }}</a></li>
+          <li><a rel="external" href="https://support.mozilla.org/products/mobile" data-ga="android - support">{{ _('Need help?') }}</a></li>
         </ul>
 
         <ul class="tertiarynav" data-parent="os">
-          <li><a rel="external" href="https://support.mozilla.org/products/firefox-os" data-ga="os - support">{{ _('Support') }}</a></li>
           <li><a rel="external" href="https://blog.mozilla.org/blog/category/firefox-os/" data-ga="os - news">{{ _('News') }}</a></li>
-          <li><a rel="external" href="https://marketplace.firefox.com/" data-ga="os - marketplace">{{ _('Marketplace') }}</a></li>
-          <li><a rel="external" href="https://developer.mozilla.org/Firefox_OS" data-ga="os - developers">{{ _('Developers') }}</a></li>
+          <li><a rel="external" href="https://developer.mozilla.org/Firefox_OS" data-ga="os - developers">{{ _('For developers') }}</a></li>
+          <li><a rel="external" href="https://find.firefox.com" data-ga="os - find my device">{{ _('Find My Device') }}</a></li>
+          <li><a rel="external" href="https://support.mozilla.org/products/firefox-os" data-ga="os - support">{{ _('Need help?') }}</a></li>
+        </ul>
+      </div>{#-- /#fxfamilynavV1-tertiarynav --#}
+    </nav>{#-- /#fxfamillynavV1 --#}
+
+    {# Page will dictate CTA (button, usually) to be placed in this wrapper #}
+    <div id="fxfamilynavV1-cta-wrapper" class="fxfamilynav-cta-wrapper"></div>
+
+    <button type="button" id="fxfamilynavV1-tertiarynav-trigger" class="fxfamilynav-tertiarynav-trigger" aria-controls="fxfamilynav-tertiarynav">
+      <span>{{ _('Menu') }}</span>
+      <div class="trigger-dots">
+        <div class="trigger-dot"></div>
+        <div class="trigger-dot"></div>
+        <div class="trigger-dot"></div>
+      </div>
+    </button>
+
+    <a id="fxfamilynavV1-tabzilla" class="fxfamilynav-tabzilla" href="{{ url('mozorg.home') }}">{{ _('Mozilla') }}</a>
+  </div>{#-- /.container --#}
+</header>
+
+<header id="fxfamilynavV2-header" class="fxfamilynav-header{% if (fxfamilynav_class) %} {{ fxfamilynav_class }}{% endif %}">
+  <div class="container">
+    <i class="fxfamilynav-logo">{{ _('Firefox') }}</i>
+    <nav id="fxfamilynav" role="navigation">
+      <ul id="fxfamilynavV2-primary" class="primarynav">
+        <li id="desktops">{{ _('For desktops &amp; laptops') }}</li>
+        <li id="mobiles">{{ _('For phones &amp; tablets') }}</li>
+      </ul>
+
+      <div id="fxfamilynavV2-subnav" class="fxfamilynav-subnav">
+        <ul class="subnav" data-parent="desktops">
+          <li><a href="{{ url('firefox.desktop.index') }}" data-id="desktops-index">{{ _('Overview') }}</a></li>
+          <li><a href="{{ url('firefox.desktop.trust') }}" data-id="desktops-trust">{{ _('Trusted') }}</a></li>
+          <li><a href="{{ url('firefox.desktop.customize') }}" data-id="desktops-customize">{{ _('Flexible') }}</a></li>
+          <li><a href="{{ url('firefox.desktop.fast') }}" data-id="desktops-fast">{{ _('Fast') }}</a></li>
+          <li><a href="{{ url('firefox.sync') }}" data-id="desktops-sync">{{ _('Sync') }}</a></li>
+          <li><a href="{{ url('firefox.hello') }}" data-id="desktops-hello">{{ _('Hello') }}</a></li>
+        </ul>{#-- /subnav-desktops --#}
+
+        <ul class="subnav" data-parent="mobiles">
+          <li>
+            <a href="{{ url('firefox.android.index') }}" data-id="mobiles-android">{{ _('Android') }}</a>
+
+            <ul>
+              <li><a href="{{ url('firefox.android.index') }}" data-id="mobiles-android-index">{{ _('Overview') }}</a></li>
+              <li><a href="{{ url('firefox.sync') }}" data-id="mobiles-android-sync">{{ _('Sync') }}</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="{{ url('firefox.os.index') }}" class="primary-link" data-id="mobiles-os">{{ _('Firefox OS') }}</a>
+
+            <ul>
+              <li><a href="{{ url('firefox.os.index') }}" data-id="mobiles-os-index">{{ _('Overview') }}</a></li>
+              <li><a href="{{ url('firefox.os.devices') }}" data-id="mobiles-os-devices">{{ _('Devices') }}</a></li>
+              <li><a href="{{ url('firefox.partners.index') }}" data-id="mobiles-os-partners">{{ _('For partners') }}</a></li>
+              <li><a rel="external" href="https://marketplace.firefox.com/" data-id="mobiles-os-marketplace">{{ _('Marketplace') }}</a></li>
+            </ul>
+          </li>
+        </ul>{#-- /subnav-mobiles --#}
+      </div>{# --/#fxfamilynavV2-subnav --#}
+
+      <div id="fxfamilynavV2-tertiarynav" class="fxfamilynav-tertiarynav">
+        {# the triangle needs a border, so :before content doesn't cut it #}
+        <div class="triangle"></div>
+        <div class="triangle-border"></div>
+
+        <ul class="tertiarynav" data-parent="desktops">
+          <li><a href="{{ url('firefox.dnt') }}" data-ga="V2 desktop - dnt">{{ _('Do Not Track') }}</a></li>
+          <li><a href="{{ url('firefox.tiles') }}" data-ga="V2 desktop - tiles">{{ _('Tiles') }}</a></li>
+          <li><a href="{{ url('firefox.interest-dashboard') }}" data-ga="V2 desktop - interest dashboard">{{ _('Interest Dashboard') }}</a></li>
+          <li><a href="{{ url('firefox.developer') }}" data-ga="V2 desktop - developer edition">{{ _('Developer Edition') }}</a></li>
+          <li><a rel="external" href="https://support.mozilla.org/kb/private-browsing-browse-web-without-saving-info" data-ga="V2 desktop - private browsing">{{ _('Private Browsing') }}</a></li>
+          <li><a rel="external" href="https://addons.mozilla.org" data-ga="V2 desktop - addons">{{ _('Add-Ons') }}</a></li>
+          <li><a rel="external" href="https://support.mozilla.org/products/firefox" data-ga="V2 desktop - support">{{ _('Need help?') }}</a></li>
+        </ul>
+
+        <ul class="tertiarynav" data-parent="mobiles">
+          <li>
+            {{ _('Android') }}
+
+            <ul>
+              <li><a href="{{ url('firefox.dnt') }}" data-ga="V2 mobiles - android - dnt">{{ _('Do Not Track') }}</a></li>
+              <li><a rel="external" href="https://www.youtube.com/watch?v=Ewk0YtFTBec&amp;list=PLA8ABF6B7A66A0C5E&amp;index=15" data-ga="V2 mobiles - android - private browsing">{{ _('Private Browsing') }}</a></li>
+              <li><a rel="external" href="https://addons.mozilla.org/android/" data-ga="V2 mobiles - android - addons">{{ _('Add-Ons') }}</a></li>
+              <li><a rel="external" href="https://support.mozilla.org/products/mobile" data-ga="V2 mobiles - android - support">{{ _('Need help?') }}</a></li>
+            </ul>
+          </li>
+          <li>
+            {{ _('Firefox OS') }}
+
+            <ul>
+              <li><a rel="external" href="https://blog.mozilla.org/blog/category/firefox-os/" data-ga="V2 mobiles - os - news">{{ _('News') }}</a></li>
+              <li><a rel="external" href="https://developer.mozilla.org/Firefox_OS" data-ga="V2 mobiles - os - developers">{{ _('For developers') }}</a></li>
+              <li><a rel="external" href="https://find.firefox.com" data-ga="V2 mobiles - os - find my device">{{ _('Find My Device') }}</a></li>
+              <li><a rel="external" href="https://support.mozilla.org/products/firefox-os" data-ga="V2 mobiles - os - support">{{ _('Need help?') }}</a></li>
+            </ul>
+          </li>
         </ul>
       </div> {#-- /#fxfamilynav-tertiarynav --#}
     </nav> {#-- /#fxfamillynav --#}
 
     {# Page will dictate CTA (button, usually) to be placed in this wrapper #}
-    <div id="fxfamilynav-cta-wrapper"></div>
+    <div id="fxfamilynavV2-cta-wrapper" class="fxfamilynav-cta-wrapper"></div>
 
-    <button type="button" id="fxfamilynav-tertiarynav-trigger" aria-controls="fxfamilynav-tertiarynav">
+    <button type="button" id="fxfamilynavV2-tertiarynav-trigger" class="fxfamilynav-tertiarynav-trigger" aria-controls="fxfamilynav-tertiarynav">
       <span>{{ _('Menu') }}</span>
       <div id="trigger-dots">
         <div class="trigger-dot"></div>
@@ -154,6 +258,6 @@ are those changes? We don't know yet! Stay on your toes!
       </div>
     </button>
 
-    <a id="fxfamilynav-tabzilla" href="{{ url('mozorg.home') }}">{{ _('Mozilla') }}</a>
+    <a class="fxfamilynav-tabzilla" href="{{ url('mozorg.home') }}">{{ _('Mozilla') }}</a>
   </div>{#-- /.container --#}
 </header>
