--- a/media/css/firefox/desktop/index.less
+++ b/media/css/firefox/desktop/index.less
@@ -5,9 +5,8 @@
 @import '../../sandstone/lib.less';
 @import 'common.less';
 
-// set nav pointer
-#site-header-logo {
-    .nav-pointer();
+#wrapper {
+    margin-top: -162px; // family nav
 }
 
 // animation defaults
@@ -45,7 +44,7 @@
 }
 
 #trust {
-    background: #fcfcfa url(/media/img/firefox/desktop/bg-pixelfox.png) center bottom no-repeat;
+    background: #fcfcfa url(/media/img/firefox/desktop/bg-pixelfox-new.png) center bottom no-repeat;
 
     a {
         .open-sans;
