--- a/media/css/firefox/desktop/index.less
+++ b/media/css/firefox/desktop/index.less
@@ -5,9 +5,8 @@
 @import '../../sandstone/lib.less';
 @import 'common.less';
 
-// set nav pointer
-#site-header-logo {
-    .nav-pointer();
+#wrapper {
+    margin-top: -162px; // family nav
 }
 
 // animation defaults
